--- a/app.json
+++ b/app.json
@@ -37,6 +37,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "d8c400fe-9512-4077-970f-71f69c991108"
+      }
     }
   }
 }
